# kyren.github.io

./: .dir-locals.el  .gitignore  Gemfile  _config.yml  build.sh  build_gemset.sh  default.nix  gemset.nix  index.html  index.md  shell.nix
.bundle/: config
_includes/: footer.html  header.html
_layouts/: home.html
_posts/: 2018-09-14-rustconf-talk.md  2018-09-14-welcome-to-jekyll.markdown  2018-09-21-block-lighting.md  2023-12-12-movement.md
_sass/: _syntax.scss  motherfucking.scss
_scripts/: build.sh  build_gemset.sh  build_source.sh  clean.sh  run.sh  serve.py  update_gemset.sh
_source/block_lighting_demos/: Cargo.toml  build.rs  index.html  index.js  package-lock.json
_source/block_lighting_demos/src/: block_lighting.rs  blocks.rs  demo.rs  f32_array.rs  glutil.rs  lib.rs  main.rs  renderer.rs  u8_array.rs  util.rs
_source/block_lighting_demos/static/: index.html
assets/: main.scss
block_lighting_demos/: 0.index.js  1.index.js  block_lighting_demos.js  block_lighting_demos_bg.wasm  index.html  index.js  wasm_test.js  wasm_test.wasm
rustconf_2018_slides/: index.html
