[package]
name = "block_lighting_demos"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "*"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'Window',
  'console',
]