[package]
name = "block_lighting_demos"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
failure = "*"
js-sys = "*"
twox-hash = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "*"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
  'console',
]